--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -67,13 +67,13 @@
                                 {{!-- Field 1 --}}
                                 <b><label for="tuluble">INCI Name:</label></b>
                                 <input type="text" name="newInciName" required id="newInciName" placeholder="Enter INCI Name"
-                                    maxlength="20" pattern="^[a-zA-Z0-9\s/-%\()]*$">
+                                    maxlength="200">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
                                 <b><label for="tuluble">Trade Name:</label></b>
                                 <input type="text" name="newTradeName" required id="newTradeName" placeholder="Enter Trade Name"
-                                    maxlength="20" pattern="^[a-zA-Z0-9\s()-]*$">
+                                    maxlength="20" >
                                 <p> </p>
 
                                 <b><label for="tuluble">Encoding:</label></b>
@@ -124,11 +124,11 @@
 
                                 <b><label for="tuluble">Lot Number:</label></b>
                                 <input type="text" name="newLotNum" required id="newLotNum" placeholder="Enter Lot Number"
-                                    maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
+                                    maxlength="20">
                                 <p> </p>
 
                                 <b><label for="tuluble">Cost Per Kilo:</label></b>
-                                <input type="text" name="newCost" required id="newCost" placeholder="Enter Cost Per Kilo"
+                                <input type="text" name="newCost" id="newCost" placeholder="Enter Cost Per Kilo"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
@@ -360,7 +360,8 @@
                                             
                                                 <b>Trade Name: </b> {{this.trade_name}}<br></br>
                                                 <b>INCI Name: </b> {{this.inci_name}}<br></br>
-                                                <b>Amount Available: </b> {{this.amt}} {{this.unit}}<br></br>
+                                                <b>Classifier: </b> {{this.classifier_id}} <br></br>
+                                                <b>Amount Available: </b> {{this.amt}} <br></br>
                                                 <b>Supplier:</b> {{this.supplier}}<br></br>
                                                 <b>Lot Number:</b> {{this.lot_num}}<br></br>
                                                 <b>Shelf:</b> {{this.shelf}}<br></br>
@@ -409,7 +410,7 @@
 
                                                     <b><label for="tuluble">INCI Name:</label></b>
                                                     <input type="text" name="editInciName" id="editInciName"
-                                                        value="{{this.inci_name}}" pattern="^[a-zA-Z0-9\s]*$">
+                                                        value="{{this.inci_name}}" maxlength="200" >
                                                     <p> </p>
 
                                                 {{!-- Field 2 --}}
@@ -419,7 +420,7 @@
 
                                                 <b><label for="tuluble">Encoding:</label></b>
                                                 <input type="text" name="editEncoding" id="editEncoding" value="{{this.encoding}}"
-                                                    maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
+                                                    maxlength="20" >
                                                 <p> </p>
                                                 <br>
 
