--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -235,7 +235,7 @@
                                         <select name="userInput2" id="userInput2" class="browser-default">
                                             <option value="0" disabled selected>Choose your ingredient</option>
                                             {{#each inventory_data}}
-                                                <option value="{{ingredient_id}}">{{inci_name}} (LOT {{lot_num}})</option>
+                                                <option value="{{ingredient_id}}">{{inci_name}} (SUPP: {{supplier}}) (LOT {{lot_num}})</option>
                                             {{/each}}
                                         </select>
                                         <p> </p>
